[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voygr"
version = "0.3.0"
description = "CLI for the Voygr Business Validation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yarik Markov", email = "yarik@voygr.tech" },
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[project.scripts]
voygr = "voygr.cli:cli"

[project.urls]
Homepage = "https://dev.voygr.tech"
Repository = "https://github.com/voygr-tech/dev-tools"
